<resources>
    <string name="app_name">Photon</string>
    <string name="smt">SMT</string>
    <string name="all">All</string>
    <string name="token_trans"> %1$s %2$s </string>
    <string name="on_line">On line</string>
    <string name="off_line">Off line</string>
    <string name="wallet_create">Create new account</string>
    <string name="wallet_import">Import an account</string>
    <string name="wallet_delete">Delete account</string>
    <string name="wallet_change">Change account</string>
    <string name="wallet_official">Official wallet</string>
    <string name="wallet_private_key">Private key</string>
    <string name="wallet_name_hint">Account Name</string>
    <string name="wallet_balance_hint">Balance</string>
    <string name="wallet_create_new">Create</string>
    <string name="wallet_import_new">Import</string>
    <string name="wallet_create_ing">Creating...</string>
    <string name="wallet_import_ing">Importing...</string>
    <string name="wallet_setting_name">Please set the account name</string>
    <string name="wallet_name_warning">Please set account names with 1–12 digits</string>
    <string name="wallet_pwd_warning">Please set passwords with 6–16 digits</string>
    <string name="wallet_empty">No wallet</string>
    <string name="wallet_scan_cant_photon">Observation mode cannot be startup photon</string>
    <string name="wallet_scan_cant_click">Observing mode cannot do this</string>
    <string name="wallet_copy">Please back up your wallet</string>
    <string name="account_pwd">Account password</string>
    <string name="hint_pwd_warning">To ensure safety of your balance, please do not disclose your privacy to others. </string>
    <string name="wallet_create_failure">Failed to create account!</string>
    <string name="wallet_pwd_error">Wrong password</string>
    <string name="wallet_token_number">Number</string>
    <string name="wallet_backup">Manager</string>
    <string name="wallet_private_key_hint">Please enter private key</string>
    <string name="wallet_import_start">Start importing</string>
    <string name="wallet_official_info">Copy and paste Ether keystore.</string>
    <string name="wallet_keysotre_info">Keystore text content</string>
    <string name="wallet_keysotre_pwd">KeyStore&quot;&quot; password</string>
    <string name="wallet_keystore_empty">Keystore cannot be blank</string>
    <string name="wallet_private_key_empty">Private key cannot be empty</string>
    <string name="wallet_private_key_error">Invalid private key</string>
    <string name="wallet_pwd_empty">Password cannot be blank</string>
    <string name="wallet_private_key_error_1">Private key import failed, unrecognized character: %s</string>
    <string name="wallet_copy_keystore_2">Copy keystore</string>
    <string name="wallet_private_key_check_out">Private key can only be exported once, please keep it safe</string>
    <string name="wallet_copy_private_key_2">Copy private key</string>
    <string name="wallet_show_private_key_3">Private key copied</string>
    <string name="wallet_show_keystore_2">Display keyStore</string>
    <string name="wallet_show_keystore">Current account KeyStore</string>
    <string name="wallet_show_private_key">Current account private key</string>
    <string name="wallet_copy_private_key">Export private key</string>
    <string name="wallet_copy_keysotre">Export keystore</string>
    <string name="wallet_copy_pwd_info">Hint: %s</string>
    <string name="wallet_scan_del">Deleting accounts cannot be reversed. Are you sure?</string>
    <string name="error_address">Wrong address</string>
    <string name="account">Account</string>
    <string name="account_pwd_input">Set password</string>
    <string name="account_pwd_login_input">Enter password</string>
    <string name="account_pwd_again_input">Confirm password</string>
    <string name="account_pwd_info_input">Password hint</string>
    <string name="account_pwd_again_warning">Password does not match</string>
    <string name="account_name_exist">Username already exists</string>
    <string name="notification_wallgen_finished">Account created!</string>
    <string name="photon_open_channel_error">Open channel fail</string>
    <string name="photon_channel_create_enter_ing">Creating...</string>
    <string name="photon_open_channel_success">Channel is being created</string>
    <string name="spectrum">Spectrum</string>
    <string name="photon">Photon</string>
    <string name="photon_to">To</string>
    <string name="photon_in_balance">Balance in photon %s</string>
    <string name="photon_create_balance">Balance %s</string>
    <string name="photon_get_channel">Info</string>
    <string name="photon_channel">Channel</string>
    <string name="photon_channel_note">Note:</string>
    <string name="photon_channel_note_1">Note</string>
    <string name="photon_channel_note_hint">Input channel note</string>
    <string name="photon_trans_ing">Transfer...</string>
    <string name="photon_forced_close">Forced close</string>
    <string name="photon_channel_settle">Settle channel</string>
    <string name="photon_start_up">Restart photon</string>
    <string name="photon_stop">Do you exit the photon?</string>
    <string name="photon_restart">Photon does not start, please restart photon</string>
    <string name="photon_locked_amount">Locked amount</string>
    <string name="photon_transfer_list_empty">Transfer list is empty</string>
    <string name="photon_transfer_title">Photon Transactions</string>
    <string name="photon_amount">Amount</string>
    <string name="photon_amount_send">- %1$s%2$s</string>
    <string name="photon_amount_received">+ %1$s%2$s</string>
    <string name="photon_transfer_no_route">No available route</string>
    <string name="photon_transfer_time">Time</string>
    <string name="photon_transfer_success">Transfer Success</string>
    <string name="photon_transfer_error">Transfer failed</string>
    <string name="photon_transfer_cancel">Transfer cancel</string>
    <string name="photon_transfer_ing">Transferring</string>
    <string name="photon_tx_withdraw_1">Withdraw success</string>
    <string name="photon_tx_withdraw_2">Withdraw failed</string>
    <string name="photon_tx_withdraw_3">Withdrawing</string>
    <string name="photon_tx_deposit_1">Deposit success</string>
    <string name="photon_tx_deposit_2">Deposit failed</string>
    <string name="photon_tx_deposit_3">Depositing</string>
    <string name="photon_tx_create_1">Create success</string>
    <string name="photon_tx_create_2">Create failed</string>
    <string name="photon_tx_create_3">Creating</string>
    <string name="photon_tx_close_1">Close success</string>
    <string name="photon_tx_close_2">Close failed</string>
    <string name="photon_tx_close_3">Closing</string>
    <string name="photon_tx_forced_close_1">Forced Close success</string>
    <string name="photon_tx_forced_close_2">Forced Close failed</string>
    <string name="photon_tx_forced_close_3">Forced shutdown</string>
    <string name="photon_tx_settle_1">Settle success</string>
    <string name="photon_tx_settle_2">Settle failed</string>
    <string name="photon_tx_settle_3">In settlement</string>
    <string name="photon_partner">Partner</string>
    <string name="photon_start_up_ing">Photon is starting, please wait</string>
    <string name="photon_channel_close_hint">Close the channel?</string>
    <string name="photon_channel_forced_close_hint">Forced close the channel?</string>
    <string name="photon_channel_forced_close_hint_1">Cannot shut down properly, is it forced to close the channel?</string>
    <string name="photon_channel_forced_close_hint_2">Cannot withdraw cash normally, whether to close the channel for cash withdrawal?</string>
    <string name="photon_channel_forced_settle_hint">Settle the channel?</string>
    <string name="photon_channel_close_content">*Closing channel consumes Gas：approximately 0.002 SMT,Because it is on chain transaction, it takes a certain amount of time.</string>
    <string name="photon_channel_forced_close_content">* Forced to close the channel requires approximately Gas: 0.002SMT, which takes approximately one week to settle.</string>
    <string name="photon_channel_settle_content">*Settle channel consumes Gas：approximately 0.002 SMT,Because it is on chain transaction, it takes a certain amount of time.</string>
    <string name="photon_channel_withdraw_hint">Sure to withdraw？</string>
    <string name="photon_channel_withdraw_zero">No balance in the channel</string>
    <string name="photon_channel_withdraw_content">Will withdraw the entire balance %1$s%2$s,Because it is on chain transaction, it takes a certain amount of time, please wait.</string>
    <string name="photon_channel_content">Channel is closed,Because it is on chain transaction, it takes a certain amount of time, please wait.</string>
    <string name="photon_channel_content_1">Forcibly close the channel, please wait for the block to be synchronized to the target block for settlement.</string>
    <string name="photon_channel_content_2">After the settlement, the channel will be closed and the amount will be returned to the account address.</string>
    <string name="photon_channel_content_3">It takes a while to close the channel. If the time is too long, you can forcefully close the channel.</string>
    <string name="photon_channel_content_4">It takes a while to withdraw cash. If the time is too long, you can force the channel to be closed for withdrawal.</string>
    <string name="photon_channel_content_5">The other party is withdrawing, it will take a while, If the time is too long, you can forcefully close the channel.</string>
    <string name="photon_channel_content_6">The other party is closing the channel. If the time is too long, you can force the channel to be closed.</string>
    <string name="photon_channel_list_type_1">In the supplementary balance, it is estimated that 1~2 minutes.</string>
    <string name="photon_channel_list_type_3">Whether to force shutdown?</string>
    <string name="photon_channel_list_type_4">Whether to force withdraw?</string>
    <string name="photon_channel_list_type_5">Settlement is blocks,please wait...%1$d(Current block)/%2$d(Settle block)</string>
    <string name="photon_channel_list_type_6">Settle now</string>
    <string name="photon_channel_list_type_7">In settlement,Because it is on chain transaction, it takes a certain amount of time, please wait.</string>
    <string name="photon_channel_list_type_8">Channel closed successfully</string>
    <string name="photon_channel_create_enter">Enter Channel</string>
    <string name="photon_channel_add_complete">Add to Complete</string>
    <string name="photon_channel_list_deposit">Deposit</string>
    <string name="photon_channel_create_enter_add_error">Add error</string>
    <string name="photon_channel_create_enter_add">Adding...</string>
    <string name="photon_channel_no">No channel, please create first</string>
    <string name="photon_list_empty">Channel list is empty</string>
    <string name="photon_withdraw">Withdraw</string>
    <string name="photon_close">Close</string>
    <string name="photon_state">State</string>
    <string name="photon_date">Date</string>
    <string name="photon_balance_1">Balance</string>
    <string name="photon_pay_1">Pay</string>
    <string name="photon_channel_transfer_type_1">* This transfer requires a fee of %1$s%2$s, and whether to continue the transfer.</string>
    <string name="photon_channel_transfer_type_2">Continue</string>
    <string name="photon_channel_balance_on_chain">Balance on chain</string>
    <string name="photon_channel_balance_in_photon">Balance in photon</string>
    <string name="copy_address">Copy address</string>
    <string name="photo_save">Save Picture</string>
    <string name="qr_code">QR code</string>
    <string name="set_amount">Input amount</string>
    <string name="set_amount_address">Input address</string>
</resources>