<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">
	
	<include layout="@layout/app_title_layout"/>
	
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:paddingLeft="15dp"
		android:paddingRight="15dp">

		<TextView
			android:id="@+id/partner"
			android:layout_width="230dp"
			android:layout_height="50dp"
			android:layout_weight="1"
			android:ellipsize="middle"
			android:gravity="center_vertical"
			android:singleLine="true"
			android:hint="@string/photon_partner"
			android:textColor="@color/color_7fe2edea"
			android:textSize="@dimen/dimens_15_sp"/>
		
		<View
			android:layout_width="match_parent"
			android:layout_height="0.5dp"
			android:background="@color/color_2fbaffec"/>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="50dp"
			android:orientation="horizontal">

			<TextView
				android:layout_width="0dp"
				android:layout_height="match_parent"
				android:layout_gravity="center_vertical"
				android:layout_marginRight="10dp"
				android:layout_weight="1"
				android:gravity="center_vertical"
				android:text="@string/photon_balance_1"/>

			<TextView
				android:id="@+id/balance"
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:layout_gravity="center_vertical"
				android:gravity="center_vertical"
				android:singleLine="true"
				android:textColor="@color/color_7fe2edea"
				android:textSize="14sp"/>

		</LinearLayout>

		<View
			android:layout_width="match_parent"
			android:layout_height="0.5dp"
			android:background="@color/color_2fbaffec"/>

	</LinearLayout>
	
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="50dp"
		android:orientation="horizontal"
		android:layout_marginLeft="15dp"
		android:layout_marginRight="15dp">

		<EditText
			android:id="@+id/channel_add_number"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_gravity="center_vertical"
			android:layout_marginRight="10dp"
			android:layout_weight="1"
			android:background="@null"
			android:gravity="center_vertical|left"
			android:hint="@string/set_amount"
			android:inputType="numberDecimal"
			android:maxLength="20"
			android:singleLine="true"
			android:textColor="@color/color_7fe2edea"
			android:textColorHint="@color/color_7fe2edea"
			android:textSize="14sp"/>
		
		<TextView
			android:id="@+id/channel_token_name"
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:layout_gravity="center_vertical"
			android:gravity="center_vertical"
			android:textSize="14sp"/>
	</LinearLayout>

	<View
		android:layout_width="match_parent"
		android:layout_height="0.5dp"
		android:layout_marginRight="15dp"
		android:layout_marginLeft="15dp"
		android:background="@color/color_2fbaffec"/>

	<View
		android:id="@+id/close_key_word"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1"/>
	
	<TextView
		android:id="@+id/photon_channel_add"
		style="@style/WalletStyle"
		android:layout_marginBottom="60dp"
		android:enabled="false"
		android:textColor="@color/color_ff1b272b"
		android:background="@drawable/selector_solid_45ffbf"
		android:text="@string/photon_channel_add_complete"/>

</LinearLayout>