<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/photon_developer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_margin="12dp"
            android:text="@string/photon"/>

        <TextView
            android:id="@+id/photon_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:drawablePadding="5dp"
            android:drawableLeft="@drawable/shape_oval_45ffbf"
            android:layout_gravity="center_vertical"/>
        <View
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="0dp"/>
        <ImageView
            android:id="@+id/photon_use_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingLeft="10dp"
            android:paddingRight="15dp"
            android:src="@mipmap/photon_use_icon"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_solid_102d2b"
        android:layout_margin="12dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="@color/color_45ffbf"
                android:text="@string/photon_channel_balance_in_photon"/>

            <TextView
                android:id="@+id/photon_smt_balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="0.0000"/>

            <TextView
                android:id="@+id/photon_smt_balance_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_7fbaffec"
                android:text="@string/smt"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:orientation="horizontal"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="@color/color_45ffbf"
                android:text="@string/photon_channel_balance_on_chain"/>

            <TextView
                android:id="@+id/smt_balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="0.0000"/>

            <TextView
                android:id="@+id/smt_balance_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_7fbaffec"
                android:text="@string/smt"/>
        </LinearLayout>

    </LinearLayout>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/photon_channel"
        android:layout_marginRight="10dp"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape_round_right_30"/>

</LinearLayout>